--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,4 +1,35 @@
-.header{
-    height:30px;
+.container {
+    position: absolute;
+    width: 100%;    
+    height: 100%;
+}
+
+.header {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height:5%;
     background-color: green;
+    overflow: hidden;
+}
+
+.social {
+    position: absolute;
+    width: 8%;
+    height: 350%;
+    margin-top: 0.3%;
+    margin-bottom: 0.8%;
+    right: 0%;
+}
+
+.socialPosition {
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+.image {
+    position: relative;
+    width: 20%;
+    height: 20%;
 }
