--- a/CSS/home.css
+++ b/CSS/home.css
@@ -18,18 +18,18 @@
     position: absolute;
     width: 8%;
     height: 350%;
-    margin-top: 0.3%;
+    margin-top: 0.5%;
     margin-bottom: 0.8%;
     right: 0%;
 }
 
 .socialPosition {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 .image {
-    position: relative;
-    width: 18%;
-    height: 18%;
+    position: absolute;
+    width: 15%;
+    height: 15%;
 }
