--- a/CSS/home.css
+++ b/CSS/home.css
@@ -28,6 +28,17 @@
     margin-right: 30%;
 }
 
+.logo {
+    position: absolute;
+    margin-top: 0.03%;
+    margin-left: 1.3%;
+}
+
+.logoIcon {
+    position: absolute;
+    width: 5vh;
+}
+
 .image {
     position: absolute;
     width: 15%;
