--- a/CSS/header.css
+++ b/CSS/header.css
@@ -44,3 +44,23 @@
     width: 15%;
     height: 15%;
 }
+
+.tab {
+    position: fixed;
+    top: 5%;
+}
+
+.home {
+    position: absolute;
+    background-color: black;
+    top:12%;
+}
+
+.main {
+    position: absolute;
+    width: 100%;
+    height: 140%;
+    top: 12%;
+    left: 0%;
+
+}
