--- a/CSS/header.css
+++ b/CSS/header.css
@@ -48,19 +48,24 @@
 .tab {
     position: fixed;
     top: 5%;
+    width: 80%;
+    left: 10%;
 }
 
 .home {
     position: absolute;
-    background-color: black;
-    top:12%;
+    background-color: white;
+    top: 5%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
 }
 
 .main {
     position: absolute;
     width: 100%;
     height: 140%;
-    top: 12%;
+    top: 4.8%;
     left: 0%;
-
+    background-color: green;
 }
