--- a/CSS/header.css
+++ b/CSS/header.css
@@ -2,6 +2,7 @@
     position: absolute;
     width: 100%;    
     height: 100%;
+    background-color: green;
 }
 
 .header {
@@ -46,8 +47,8 @@
 }
 
 .tab {
-    position: fixed;
-    top: 5%;
+    position: absolute;
+    top: 0%;
     width: 80%;
     left: 10%;
 }
@@ -55,17 +56,43 @@
 .home {
     position: absolute;
     background-color: white;
-    top: 5%;
+    top: 7%;
     left: 10%;
     width: 80%;
-    height: 80%;
+    height: 87%;
 }
 
 .main {
     position: absolute;
     width: 100%;
-    height: 140%;
+    height: 100%;
     top: 4.8%;
     left: 0%;
     background-color: green;
 }
+
+/* tab color */
+.nav-tabs>li>a {
+    background-color: white; 
+    border-color: green;
+    color:black;
+    font-weight: bold;   
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  
+  /* hover tab color */
+  .nav-tabs>li>a:hover {
+    border-color: green;
+    background-color: rgb(205, 236, 205);
+  }
+
+/* active tab color */
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+    color: black;
+    background-color: rgb(228, 220, 220);
+    border: 1px solid green;    
+    font-weight: bold;   
+    margin-left: 1%;
+    margin-right: 1%;
+  }
