--- a/CSS/header.css
+++ b/CSS/header.css
@@ -10,23 +10,23 @@
     top:0;
     left: 0;
     width: 100%;
-    height:5%;
+    height:40px;
     background-color: green;
     overflow: hidden;
 }
 
 .social {
     position: absolute;
-    width: 8%;
-    height: 350%;
+    width: 110px;
+    height: 100px;
     margin-top: 0.5%;
     margin-bottom: 0.8%;
     right: 0%;
 }
 
 .socialPosition {
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 32%;
+    margin-right: 32%;
 }
 
 .logo {
@@ -37,13 +37,12 @@
 
 .logoIcon {
     position: absolute;
-    width: 5vh;
+    width: 43px;
 }
 
 .image {
     position: absolute;
-    width: 15%;
-    height: 15%;
+    width: 20px;
 }
 
 .tab {
@@ -56,17 +55,17 @@
 .home {
     position: absolute;
     background-color: white;
-    top: 7%;
+    top: 45px;
     left: 10%;
     width: 80%;
-    height: 87%;
+    height: 587px;
 }
 
 .main {
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 4.8%;
+    top: 40px;
     left: 0%;
     background-color: green;
 }
@@ -77,6 +76,9 @@
     border-color: green;
     color:black;
     font-weight: bold;   
+    font-family: "Segoe UI",Arial,sans-serif;
+    letter-spacing: 1px;
+    font-size: 15px;
     margin-left: 1%;
     margin-right: 1%;
   }
@@ -91,8 +93,7 @@
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
     color: black;
     background-color: rgb(228, 220, 220);
-    border: 1px solid green;    
-    font-weight: bold;   
+    border: 1px solid green;     
     margin-left: 1%;
     margin-right: 1%;
   }
