--- a/CSS/main.css
+++ b/CSS/main.css
@@ -50,27 +50,28 @@
     top: 0%;
     width: 80%;
     left: 10%;
+    background-color: green;
 }
 
 .home {
     position: absolute;
     background-color: white;
-    top: 45px;
+    top: 44px;
     left: 10%;
-    width: 80%;
-    height: 587px;
+    width: 79.9%;
+    height: 800px;
 }
 
 .main {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 1000px;
     top: 40px;
     left: 0%;
     background-color: green;
 }
 
-/* tab color */
+/* tab */
 .nav-tabs>li>a {
     background-color: white; 
     border-color: green;
@@ -79,21 +80,22 @@
     font-family: "Segoe UI",Arial,sans-serif;
     letter-spacing: 1px;
     font-size: 15px;
-    margin-left: 1%;
-    margin-right: 1%;
+    cursor: pointer;
   }
   
-  /* hover tab color */
+  /* hover */
   .nav-tabs>li>a:hover {
     border-color: green;
     background-color: rgb(205, 236, 205);
   }
 
-/* active tab color */
+/* active */
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
     color: black;
-    background-color: rgb(228, 220, 220);
-    border: 1px solid green;     
-    margin-left: 1%;
-    margin-right: 1%;
+    background-color: rgb(228, 220, 220);  
+  }
+
+.sticky {
+   position: fixed;
+   top: 0;
   }
