--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,14 @@
+body {
+    background-image: url("http://subirimagen.me/uploads/20180223084950.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+}
+
 .container {
     position: absolute;
     width: 100%;    
     height: 100%;
-    background-color: green;
 }
 
 .header {
@@ -10,7 +16,7 @@
     top:0;
     left: 0;
     width: 100%;
-    height:40px;
+    height:32px;
     background-color: green;
     overflow: hidden;
 }
@@ -19,7 +25,7 @@
     position: absolute;
     width: 110px;
     height: 100px;
-    margin-top: 0.5%;
+    margin-top: 0.55%;
     margin-bottom: 0.8%;
     right: 0%;
 }
@@ -31,18 +37,18 @@
 
 .logo {
     position: absolute;
-    margin-top: 0.03%;
-    margin-left: 1.3%;
+    margin-top: -0.1%;
+    margin-left: 3%;
 }
 
 .logoIcon {
     position: absolute;
-    width: 43px;
+    width: 35px;
 }
 
 .image {
     position: absolute;
-    width: 20px;
+    width: 18px;
 }
 
 .tab {
@@ -50,7 +56,6 @@
     top: 0%;
     width: 80%;
     left: 10%;
-    background-color: green;
     box-shadow: 0px 1px 30px #a0a0a0e3;
 }
 
@@ -60,22 +65,21 @@
     top: 44px;
     left: 10%;
     width: 79.9%;
-    height: 800px;
+    height: 900px;
 }
 
 .main {
     position: absolute;
     width: 100%;
     height: 1000px;
-    top: 40px;
+    top: 55px;
     left: 0%;
-    background-color: green;
 }
 
 /* tab */
 .nav-tabs>li>a {
     background-color: white; 
-    border-color: green;
+    border-color: rgb(182, 182, 182);
     color:black;
     font-weight: bold;   
     font-family: "Segoe UI",Arial,sans-serif;
@@ -86,14 +90,14 @@
   
   /* hover */
   .nav-tabs>li>a:hover {
-    border-color: green;
-    background-color: rgb(205, 236, 205);
+    border-color: rgb(182, 182, 182);
+    background-color: rgb(228, 228, 228);
   }
 
 /* active */
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
     color: black;
-    background-color: rgb(228, 220, 220);  
+    background-color: rgb(206, 206, 206);  
   }
 
 .sticky {
