--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://subirimagen.me/uploads/20180223084950.jpg");
+    background-image: url("http://subirimagen.me/uploads/20180225153412.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
@@ -17,7 +17,7 @@ body {
     left: 0;
     width: 100%;
     height:32px;
-    background-color: green;
+    background-color: rgb(0, 114, 0);
     overflow: hidden;
 }
 
