--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://subirimagen.me/uploads/20180225153412.jpg");
+    background-image: url("http://subirimagen.me/uploads/20180226073231.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
@@ -17,7 +17,7 @@ body {
     left: 0;
     width: 100%;
     height:32px;
-    background-color: rgb(0, 114, 0);
+    background-color: green;
     overflow: hidden;
 }
 
@@ -79,7 +79,7 @@ body {
 /* tab */
 .nav-tabs>li>a {
     background-color: white; 
-    border-color: rgb(182, 182, 182);
+    border-color: rgb(172, 172, 172);
     color:black;
     font-weight: bold;   
     font-family: "Segoe UI",Arial,sans-serif;
@@ -90,14 +90,14 @@ body {
   
   /* hover */
   .nav-tabs>li>a:hover {
-    border-color: rgb(182, 182, 182);
-    background-color: rgb(228, 228, 228);
+    border-color: rgb(129, 129, 129);
+    background-color: rgb(218, 218, 218);
   }
 
 /* active */
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
     color: black;
-    background-color: rgb(206, 206, 206);  
+    background-color: rgba(190, 190, 190, 0.877);  
   }
 
 .sticky {
