--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,7 +17,7 @@ body {
     left: 0;
     width: 100%;
     height:32px;
-    background-color: green;
+    background-color: #008348;
     overflow: hidden;
 }
 
