Change icons location

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://subirimagen.me/uploads/20180226073231.jpg");
+    background-image: url("../Sprites/background.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
