--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,16 +7,16 @@ body {
 
 .container {
     position: absolute;
-    width: 100%;    
+    width: 100%;
     height: 100%;
 }
 
 .header {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width: 100%;
-    height:32px;
+    height: 32px;
     background-color: #008348;
     overflow: hidden;
 }
@@ -77,30 +77,35 @@ body {
 }
 
 /* tab */
+
 .nav-tabs>li>a {
-    background-color: white; 
+    background-color: white;
     border-color: rgb(172, 172, 172);
-    color:black;
-    font-weight: bold;   
-    font-family: "Segoe UI",Arial,sans-serif;
+    color: black;
+    font-weight: bold;
+    font-family: "Segoe UI", Arial, sans-serif;
     letter-spacing: 1px;
     font-size: 15px;
     cursor: pointer;
-  }
-  
-  /* hover */
-  .nav-tabs>li>a:hover {
+}
+
+/* hover */
+
+.nav-tabs>li>a:hover {
     border-color: rgb(129, 129, 129);
     background-color: rgb(218, 218, 218);
-  }
+}
 
 /* active */
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li.active>a:focus {
     color: black;
-    background-color: rgba(190, 190, 190, 0.877);  
-  }
+    background-color: rgba(190, 190, 190, 0.877);
+}
 
 .sticky {
-   position: fixed;
-   top: 0;
-  }
+    position: fixed;
+    top: 0;
+}
