--- a/CSS/main.css
+++ b/CSS/main.css
@@ -59,7 +59,7 @@ body {
     box-shadow: 0px 1px 30px #a0a0a0e3;
 }
 
-.home {
+.center {
     position: absolute;
     background-color: white;
     top: 44px;
