--- a/CSS/main.css
+++ b/CSS/main.css
@@ -110,3 +110,16 @@ body {
     position: fixed;
     top: 0;
 }
+
+.login{
+    position: absolute;
+    margin-top: 0.6%;
+    margin-bottom: 0.50%;
+    right: 10%;
+    font-size:13px;
+    text-align: center;
+    cursor: pointer;
+    font-style: bold;
+    color:white;
+}
+
